Updated depricated methods to comply with new standards